[package]
name = "midas"
version = "0.2.7"
authors = ["ray33ee <30669752+ray33ee@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

message-io = "0.6.0"
serde = "1.0.1"
clap = "2.33.3"
ipaddress = "0.1.1"
hlua = "0.4.1"
capture = "0.1.0"
bimap = "0.6.0"
crossterm = "0.19.0"
crossbeam-channel = "0.5.0"

[patch.crates-io]
hlua = { git = "https://github.com/ray33ee/hlua" }